added basic html

--- a/index.html
+++ b/index.html
@@ -17,16 +17,75 @@ h1{
 .one{
     text-align: center;
 }
+.city{
+    text-align: center;
+}
 
 
 </style>
 <body>
     
 <h1>World Clock</h1>
- 
+
+<select>
+    <option value="">Select a city..</option>
+    <option value="">London</option>
+    <option value="">New York</option>
+    <option value="">Auckland</option>
+</select>
+
+ <div class="city">
+<h2>
+    Los Angeles🇺🇸</h2>
+
+
+    <div class="date">
+        July 13, 2023
+    </div>
+    <div class="time">
+     3:16 PM
+    </div>
+
+
+
+ </div>
+<div class="city">
+
+<h2>Sydney🇳🇿</h2>
+<div class="date">
+    July 13, 2023
+</div>
+<div class="time">
+    3:16 PM
+</div>
+
+</div>
+<div class="city">
+
+<h2>Tokyo🇯🇵</h2>
+<div class="date">
+    July 13, 2023
+</div>
+<div class="time">
+    3:16 PM
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="one">
-<h3>this project was coded by <a href="#" target="_blank" >  Athenah Coucean    </a> </h3>
+<h3>this project was coded by <a href="https://github.com/Athens410/World-Clock-Project-Setup.git" target="_blank" >  Athenah Coucean    </a> </h3>
 
 
 
