--- a/index.html
+++ b/index.html
@@ -5,26 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Clock Project / Setup</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
-<style>
-body{
-    background: linear-gradient(109.6deg, rgb(251, 250, 225) 11.2%, rgb(206, 240, 185) 47.5%, rgb(100, 163, 111) 100.2%);
-}
-h1{
-    text-align: center;
-}
 
-.one{
-    text-align: center;
-}
-.city{
-    text-align: center;
-}
-
-
-</style>
-<body>
-    
+<body class="green">
+    <div class="container">
 <h1>World Clock</h1>
 
 <select>
@@ -81,11 +66,11 @@ h1{
 
 
 
-
+</div>
 
 
 <div class="one">
-<h3>this project was coded by <a href="https://github.com/Athens410/World-Clock-Project-Setup.git" target="_blank" >  Athenah Coucean    </a> </h3>
+<h3>this project was coded by <a href="https://github.com/Athens410/World-Clock-Project-Setup.git" target="_blank" title="new git" >  Athenah Coucean    </a> </h3>
 
 
 
