--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Clock Project / Setup</title>
     <link rel="stylesheet" href="css/style.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
 </head>
 
 <body class="green">
@@ -19,40 +21,40 @@
     <option value="">Auckland</option>
 </select>
 
- <div class="city">
+ <div class="city" id="los-angeles">
 <h2>
     Los Angeles🇺🇸</h2>
 
 
     <div class="date">
-        July 13, 2023
+       
     </div>
     <div class="time">
-     3:16 PM
+   
     </div>
 
 
 
  </div>
-<div class="city">
+<div class="city" id="sydney">
 
 <h2>Sydney🇳🇿</h2>
 <div class="date">
-    July 13, 2023
+ 
 </div>
 <div class="time">
     3:16 PM
 </div>
 
 </div>
-<div class="city">
+<div class="city" id="tokyo">
 
 <h2>Tokyo🇯🇵</h2>
 <div class="date">
-    July 13, 2023
+  
 </div>
 <div class="time">
-    3:16 PM
+    
 </div>
 
 </div>
