added call cities button
and current location time and date

--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
     
 </div>
 
-</div>
-
-
-
-
-
-
-
-
-
 
 </div>
 
+
+
+
+
+
+
+
+
+</div>
+<button onclick="goToHomepage()">all cities</button>
 </div>
 
 
